add interface texts

--- a/server/views/labels/new.pug
+++ b/server/views/labels/new.pug
@@ -5,5 +5,5 @@ block header
 
 block content
   +formFor()(action=route('labels#create') method='post')
-    +input(label, 'name', errors)(type="text", autofocus)
+    +input(label, 'name', t('views.labels.name'), errors)(type="text", autofocus)
     +submit(label)(value=t('views.labels.new.submit'))
