--- a/server/views/labels/edit.pug
+++ b/server/views/labels/edit.pug
@@ -5,6 +5,6 @@ block header
 
 block content
   +formFor()(action=route('labels#update', { id: label.id }) method='post')
-    +input(label, 'name', errors)(type="text")
+    +input(label, 'name', t('views.labels.name'), errors)(type="text")
     input(name='_method', type='hidden' value='patch')
     +submit(label)(value=t('views.labels.update.submit'))
