--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -5,6 +5,6 @@ block header
 
 block content
   +formFor()(action=route('session#create') method='post')
-    +input(signInForm, 'email')(type="text")
-    +input(signInForm, 'password')(type="password")
+    +input(signInForm, 'email', t('views.session.email'))(type="text")
+    +input(signInForm, 'password', t('views.session.password'))(type="password")
     +submit(signInForm)(value=t('views.session.new.submit'))
