--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -5,10 +5,10 @@ block header
 
 block content
   +formFor()(action=route('tasks#update', { id: task.id }) method='post')
-    +input(task, 'name', errors)(type="text", autofocus)
-    +textarea(task, 'description', 'Описание')(type="text")
-    +select(task, 'statusId', 'Статус', errors)(type="number")
-    +select(task, 'executorId', 'Исполнитель', errors)(type="number")
-    +select(task, 'labels', 'Метки', errors, false)(multiple)
+    +input(task, 'name', t('views.tasks.name'), errors)(type="text", autofocus)
+    +textarea(task, 'description', t('views.tasks.description'))
+    +select(task, 'statusId', t('views.tasks.status'), errors)
+    +select(task, 'executorId', t('views.tasks.executor'), errors)
+    +select(task, 'labels', t('views.tasks.labels'), errors, false)(multiple)
     input(name='_method', type='hidden', value='patch')
     +submit(task)(value=t('views.tasks.update.submit'))
