--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -5,9 +5,9 @@ block header
 
 block content
   +formFor()(action=route('users#update', { id: user.id }) method='post')
-    +input(user, 'firstName', errors) 
-    +input(user, 'lastName', errors)
-    +input(user, 'email', errors)(type="email")
-    +input(user, 'password', errors)(type="password")
+    +input(user, 'firstName', t('views.users.firstName'), errors)(type='text')
+    +input(user, 'lastName', t('views.users.lastName'), errors)(type='text')
+    +input(user, 'email', t('views.users.email'), errors)(type='email')
+    +input(user, 'password', t('views.users.password'), errors)(type='password')
     input(name='_method', type='hidden' value='patch')
     +submit(user)(value=t('views.users.update.submit'))
