--- a/server/views/welcome/index.pug
+++ b/server/views/welcome/index.pug
@@ -5,4 +5,4 @@ block content
     .display-4= t('views.welcome.index.hello')
     p.lead= t('views.welcome.index.description')
     hr
-    a.btn.btn-primary.btn-lg(href="https://hexlet.io")= t('views.welcome.index.more')
+    a.btn.btn-primary.btn-lg(href="https://ru.hexlet.io/professions/backend/projects/6")= t('views.welcome.index.more')
