--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -4,7 +4,7 @@ block header
   = t('views.session.new.signIn')
 
 block content
-  +formFor()(action=route('session#create') method='post')
+  +formFor()(action=route('sessions#create') method='post')
     +input(signInForm, 'email', t('views.session.email'))(type="text")
     +input(signInForm, 'password', t('views.session.password'))(type="password")
     +submit(signInForm)(value=t('views.session.new.submit'))
