--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -3,7 +3,7 @@ include ../mixins/forms.pug
 doctype html
 html(lang="en").h-100
   head
-    title Hexlet Fastify Boilerplate
+    title Simple task manager
     script(src=assetPath('main.js'))
     link(href=assetPath('main.css'))
   body.h-100.d-flex.flex-column
